# Coral

./: Cargo.toml  LICENSE.md  README.md  config.toml  line_badge.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  line_counter.yml  rust.yml
coral/: Cargo.toml
coral-command/: Cargo.toml  build.rs
coral-command/src/: lib.rs
coral-command/src/list/: deop.rs  gamemode.rs  kick.rs  kill.rs  mod.rs  msg.rs  op.rs  ping.rs  player_list.rs  reply.rs  say.rs  setworldspawn.rs  teleport.rs  usage.rs  version.rs  whitelist.rs
coral-config/: Cargo.toml
coral-config/src/: lib.rs
coral-protocol/: Cargo.toml
coral-protocol/src/: auth.rs  encryption.rs  reader.rs  writer.rs
coral-protocol/src/packets/: mod.rs
coral-protocol/src/packets/handshake/: mod.rs
coral-protocol/src/packets/login/: disconnect.rs  mod.rs
coral-protocol/src/packets/play/: block.rs  entity.rs  game.rs  inventory.rs  join_game.rs  keepalive.rs  mod.rs  movement.rs  player_list.rs
coral-protocol/src/packets/play/chat/: builder.rs  mod.rs
coral-protocol/src/packets/status/: mod.rs
coral-server/: Cargo.toml
coral-server/src/: bounding_box.rs  bungee.rs  effects.rs  entity_tracker.rs  experience.rs  lib.rs  mining.rs  ops.rs  player.rs  projectile.rs  registry.rs  smelting.rs  whitelist.rs
coral-server/src/items/: armor.rs  drop_physics.rs  drops.rs  food.rs  mod.rs  potions.rs  registry.rs  swords.rs  tools.rs
coral-server/src/player/: mod.rs  registry.rs
coral-types/: Cargo.toml
coral-types/src/: lib.rs
coral-world/: Cargo.toml
coral-world/src/: anvil.rs  blocks.rs  chunk.rs  generator.rs  level.rs  lib.rs  nbt.rs  playerdata.rs  region.rs  time.rs
coral-world/src/blocks/: definitions.rs  fluid.rs  mod.rs  registry.rs
coral/src/: fluid_sim.rs  main.rs  tasks.rs
coral/src/codec/: mod.rs  preplay.rs  ticking.rs
coral/src/codec/state/: mod.rs  preplay.rs  throttle.rs
coral/src/codec/state/play/: interact.rs  mod.rs  ticking.rs  tile_entity_window.rs  window_ops.rs
src/: config.rs  main.rs
src/codec/: mod.rs
src/command/: mod.rs
src/entity/: living.rs  mod.rs  player.rs
src/protocol/: auth.rs  encryption.rs  mod.rs  properties.rs  reader.rs  writer.rs
src/protocol/packets/: mod.rs
src/protocol/packets/handshake/: keepalive.rs  mod.rs
src/protocol/packets/login/: disconnect.rs  mod.rs
src/protocol/packets/play/: block.rs  chat.rs  entity.rs  game.rs  inventory.rs  join_game.rs  mod.rs  movement.rs  player_list.rs
src/protocol/packets/play/chat/: builder.rs  mod.rs
src/protocol/packets/status/: mod.rs
src/random/: mod.rs
src/server/: banlist.rs  entity_tracker.rs  mod.rs  player.rs  registry.rs
src/world/: blocks.rs  chunk.rs  mod.rs  time.rs  weather.rs
