[package]
name = "coral"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.52.3", features = ["full"]}
bytes = "1.11.1"
tokio-util = {version = "0.7.18", features = ["codec"]}
tokio-stream = {version = "0.1.18", features = ["full"]}
futures = "0.3.32"
serde_json = "1.0.150"
uuid = {version = "1.23.1", features = ["v3"]}
flate2 = "1.1.9"