[workspace]
resolver = "2"
members = [
  "coral",
  "coral-types",
  "coral-command",
  "coral-config",
  "coral-protocol",
  "coral-server",
  "coral-world"
]

[workspace.dependencies]
aes = "0.9.1"
base64 = "0.22.1"
bytes = "1.12.0"
cfb8 = "0.9.1"
cipher = "0.5.2"
flate2 = "1.1.9"
futures = "0.3.32"
num-bigint = "0.5.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json"] }
rsa = "=0.10.0-rc.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
toml = "1.1.2+spec-1.1.0"
uuid = { version = "1.23.4", features = ["v3", "v4"] }
