[package]
name = "coral-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
aes.workspace = true
bytes.workspace = true
cfb8.workspace = true
cipher.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde_json.workspace = true
sha1.workspace = true
uuid.workspace = true
rand.workspace = true
